# focus

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  TOOLS.md  main.py  pyproject.toml  start.bat  start.sh  test.bat  test.sh  vendor-sync.py
focus/: backup.py  card_parser.py  crud.py  database.py  exchange.py  logger.py  macros.py  models.py  paths.py  prompt_chain.py  utils.py
focus/core/: card_parser.py  database.py  logger.py  macros.py  media.py  message_render.py  models.py  paths.py  segments.py  utils.py
focus/db/: __init__.py  _core.py  characters.py  chats.py  cleanup.py  media.py  models.py  personas.py  presets.py  providers.py  settings.py
focus/providers/: __init__.py  base.py  deepseek.py  google_aistudio.py  google_base.py  google_vertex.py  moonshot.py  openai_compat.py  openrouter.py
focus/routers/: __init__.py  backup.py  characters.py  chats.py  exchange.py  pages.py  personas.py  presets.py  providers.py  settings.py  stream.py  stream_utils.py  tools.py
focus/tools/: __init__.py  builtin.py  executor.py  external.py  helpers.py  loop.py  provider_adapter.py
partials/: char_selector.html  characters_modal.html  chat_list.html  edit_character_modal.html  edit_entity_modal.html  edit_message_modal.html  edit_persona_modal.html  itemizer_modal.html  message.html  message_list.html  modal-shell.html  modal_shell.html  persona_selector.html  personas_modal.html  preset_editor.html  preset_selector.html  preset_variables.html  presets_modal.html  prompt_arranger.html  prompt_block.html  providers_modal.html  sampler_modal.html  text_expander.html  theme_modal.html
partials/chat/: center-pane.html  center_pane.html  char_selector.html  chat_list.html  left-pane.html  left_pane.html  message.html  message_list.html  persona-selector.html  persona_selector.html  right-pane.html  right_pane.html
partials/modals/: backup.html  backup_modal.html  character_modal_card.html  characters.html  characters_modal.html  confirm.html  confirm_modal.html  edit-entity.html  edit-message.html  edit_entity_modal.html  edit_message_modal.html  export-entities.html  export_entities.html  itemizer_modal.html  persona_modal_card.html  personas.html  personas_modal.html  provider-create.html  provider_create_modal.html  providers.html  providers_modal.html  sampler.html  sampler_modal.html  text-expander.html  text_expander.html  theme.html  theme_modal.html  tools.html  tools_modal.html
partials/personas/: persona-card.html  persona_card.html
partials/presets/: preset-editor.html  preset-selector.html  preset_editor.html  preset_selector.html  preset_variables.html  presets.html  presets_modal.html  prompt-arranger.html  prompt_arranger.html  prompt_block.html  sidebar_item.html
pyvern/: card_parser.py  crud.py  database.py  logger.py  macros.py  models.py  prompt_chain.py  utils.py
pyvern/providers/: __init__.py  base.py  deepseek.py  google_aistudio.py  google_base.py  google_vertex.py  moonshot.py  openai_compat.py  openrouter.py
pyvern/routers/: __init__.py  characters.py  chats.py  pages.py  personas.py  presets.py  providers.py  stream.py  stream_utils.py
static/: chat_stream.js  index.html  inter.css  style.css  tailwind-input.css
static/js/: api_paths.js  backup_manager.js  char_editor.js  delete_mode.js  edit_message.js  file_staging.js  lightbox.js  list_manager.js  message_pruner.js  message_renderer.js  modal_char_edit.js  modal_persona_edit.js  modal_providers.js  msg_dom.js  scroll_manager.js  state_manager.js  status_panel.js  theme_manager.js
templates/: base.html  characters.html  chat.html  confirm_modal.html  macros.html  personas.html  presets.html  providers.html
tests/: conftest.py  helpers.py  test_api.py  test_backup.py  test_card_parser.py  test_exchange.py  test_frontend.py  test_macros.py  test_prompt_chain.py  test_state.py  test_state_manager.js  test_stream_utils.py  test_utils.py
(+107 files in other folders)
