[project]
name = "focus"
version = "0.1.0"
description = "A lean SillyTavern alternative"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosqlite",
    "httpx",
    "openai",
    "python-multipart",
    "Pillow",
    "jinja2",
    "google-auth",
    "requests",
    "google-genai",
    "tiktoken>=0.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "cssutils>=2.15.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["focus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.envs.default.scripts]
lint = "ruff check focus/ tests/ main.py"
fmt-check = "ruff format focus/ tests/ main.py --check"
fmt = "ruff format focus/ tests/ main.py"
