[project]
name = "focus"
version = "0.1.0"
description = "A lean SillyTavern alternative"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "aiosqlite==0.22.1",
    "httpx==0.28.1",
    "openai==2.36.0",
    "python-multipart==0.0.28",
    "Pillow==12.2.0",
    "jinja2==3.1.6",
    "google-auth==2.55.0",
    "requests==2.34.2",
    "google-genai==2.10.0",
    "tiktoken==0.13.0",
    "anyio==4.9.0",
]

[project.optional-dependencies]
test = ["pytest==9.1.1", "pytest-asyncio==1.4.0", "pytest-cov==6.1.1", "cssutils==2.15.0"]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["focus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=focus --cov-report=term-missing --cov-report=html:tests/coverage_html"

[tool.coverage.run]
source = ["focus", "main.py"]
omit = ["*/vendor/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.1",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check focus/ tests/ main.py"
fmt-check = "ruff format focus/ tests/ main.py --check"
fmt = "ruff format focus/ tests/ main.py"
